<package>
  <name>smartek_camera</name>
  <version>2.0.0</version>
  <description>Node for publishing frames from a Smartek camera</description>
  <author>Juraj Oršulić</author>
  <author>Marko Car</author>
  <maintainer email="juraj.orsulic@fer.hr">Juraj Oršulić</maintainer>
  <license>Apache 2.0</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>timesync</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>timesync</run_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
</package>
